--- a/repositorio-fotos/client/Dockerfile
+++ b/repositorio-fotos/client/Dockerfile
@@ -8,6 +8,6 @@ COPY . .
 RUN npm run build
 
 FROM nginx:alpine
-COPY --from=build /usr/src/app/build /usr/share/nginx/html
+COPY --from=build /usr/src/app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
