--- a/repositorio-fotos/server/package.json
+++ b/repositorio-fotos/server/package.json
@@ -10,9 +10,13 @@
         "bcrypt": "^5.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
+        "exiftool-vendored": "^29.0.0",
         "express": "^4.18.2",
+        "file-type": "^20.0.0",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.8.0",
-        "multer": "^1.4.5-lts.1"
+        "multer": "^1.4.5-lts.1",
+        "sharp": "^0.33.5",
+        "steggy": "^2.0.1"
     }
 }
